--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,14 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^9.0.8",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
   }
 }
